[IT-2455] Fixed bottom spacing for the button

--- a/frontend/src/app/application-dashboard/components/csi-info/csi-info.component.scss
+++ b/frontend/src/app/application-dashboard/components/csi-info/csi-info.component.scss
@@ -41,7 +41,7 @@
 
 .info-button {
   position: relative;
-  bottom: 55px;
+  bottom: 60px;
   float: right;
   color: $color-background;
   background-color: $color-primary;
